# encryptionLib

./: CMakeLists.txt  LICENSE  README.md  conanfile.py
src/: CMakeLists.txt  cipher.cpp  cipher.h
tests/: CMakeLists.txt  tst_encryption.cpp
